<resources>
    <string name="app_name">Movie app</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_image">Poster image</string>
    <string name="return_back">return back</string>
    <string name="title">"Title:"</string>
    <string name="actors">Actors :</string>
    <string name="writers">Writers :</string>
    <string name="imdb_rating">Imdb Rating: </string>
    <string name="imdb_votes">"Imdb Votes :"</string>
    <string name="released">"Released: "</string>
    <string name="popularity">"Popularity: "</string>
    <string name="budget">"Budget: "</string>
    <string name="revenue">"Revenue: "</string>
    <string name="description">"Description"</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
</resources>