<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.movies.MovieFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/movie_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            app:title="Movie details"
            android:visibility="gone"
            app:titleTextColor="@color/white">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/movie_search"
                style="@style/Widget.AppCompat.SearchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end" />


        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/popular_movie_recycler"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/view_holder_movie" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/upcoming"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/upcoming_movie_recycler"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/view_holder_movie" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/now_playing"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/now_playing_movie_recycler"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/view_holder_movie" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textSize="20sp"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/black"/>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/top_reted_movie_recycler"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/view_holder_movie" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>